--- a/index.html
+++ b/index.html
@@ -5,27 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pret Coffee Timer</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Add Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Pret Coffee Timer</h1>
+        <div class="header">
+            <i class="fas fa-coffee coffee-icon"></i>
+            <h1>Pret Coffee Timer</h1>
+        </div>
         <div class="date" id="currentDate"></div>
         
         <div class="user-section">
-            <button onclick="selectUser('Vaibhav')" id="vaibhavBtn">Vaibhav</button>
-            <button onclick="selectUser('Manas')" id="manasBtn">Manas</button>
+            <button onclick="selectUser('Vaibhav')" id="vaibhavBtn" class="user-btn">
+                <i class="fas fa-user"></i>
+                <span>Vaibhav</span>
+            </button>
+            <button onclick="selectUser('Manas')" id="manasBtn" class="user-btn">
+                <i class="fas fa-user"></i>
+                <span>Manas</span>
+            </button>
         </div>
 
         <div class="status-section">
             <div class="coffee-count">
-                Coffees Remaining Today: <span id="coffeeCount">5</span>
+                <i class="fas fa-mug-hot"></i>
+                <span id="coffeeCount">5</span> remaining
             </div>
             <div class="timer" id="timer">
-                Next coffee available in: <span id="timerDisplay">Ready!</span>
+                <i class="fas fa-clock"></i>
+                <span id="timerDisplay">Ready!</span>
             </div>
         </div>
 
-        <button id="getCoffeeBtn" onclick="getCoffee()" class="coffee-btn">Get Coffee</button>
+        <button id="getCoffeeBtn" onclick="getCoffee()" class="coffee-btn">
+            <i class="fas fa-mug-hot"></i>
+            Get Coffee
+        </button>
 
         <div class="info-section">
             <p id="statusMessage"></p>
